@@ -183,13 +183,13 @@ src/x2sys/x2sys_init.1
 src/x2sys/x2sys_put.c
 src/x2sys/x2sys_put.1
 src/x2sys/makefile
-src/x2sys/geo.def
-src/x2sys/geoz.def
-src/x2sys/gmt.def
-src/x2sys/mgd77.def
-src/x2sys/mgd77+.def
-src/x2sys/xy.def
-src/x2sys/xyz.def
+share/x2sys/geo.def
+share/x2sys/geoz.def
+share/x2sys/gmt.def
+share/x2sys/mgd77.def
+share/x2sys/mgd77+.def
+share/x2sys/xy.def
+share/x2sys/xyz.def
 src/x_system/README.x_system
 src/x_system/makefile
 src/x_system/x_edit.c
