@@ -1,0 +1,14 @@
+#		$Id: geo.def,v 1.1 2008-04-25 05:43:53 guru Exp $
+#
+# Define file for X2SYS processing of ASCII lon,lat files
+#
+# This file applies to plain 2-column ASCII files.
+# Only locations can be found since there are no data columns
+#
+#---------------------------------------------------------------------
+#ASCII		# The input file is ASCII
+#SKIP 1		# The number of header records to skip
+#---------------------------------------------------------------------
+#name	intype	NaN-proxy?	NaN-proxy	scale	offset	oformat
+lon	a	N		0		1	0	%10.5f
+lat	a	N		0		1	0	%9.5f
