@@ -1,0 +1,22 @@
+#		$Id: gmt.def,v 1.1 2008-04-25 05:43:53 guru Exp $
+#
+# Define file for X2SYS processing of GMT/MGG files
+#
+# This file applies to the GMT MGG file format.
+# This format was developed by P. Wessel and
+# Walter H.F. Smith at Lamont in the late 1980ies
+# Utilities to deal with these files are supplied
+# in the GMT supplemental package mgg
+#
+#---------------------------------------------------------------------
+#BINARY		# The input file is binary
+#SKIP 18	# The number of header bytes to skip
+#---------------------------------------------------------------------
+#name	intype	NaN-proxy?	NaN-proxy	scale	offset	oformat
+time	i	N		0		1	0	%10.0f
+lat	i	N		0		1.0e-6	0	%9.5f
+lon	i	N		0		1.0e-6	0	%10.5f
+faa	h	Y		-32000		0.1	0	%6.1f
+mag	h	Y		-32000		1	32000	%6.0f
+top	h	Y		-32000		1	0	%6.0f
+#---------------------------------------------------------------------
