@@ -1,0 +1,14 @@
+#		$Id: xyz.def,v 1.1 2008-04-25 05:43:53 guru Exp $
+#
+# Define file for X2SYS processing of ASCII xyz files
+#
+# This file applies to plain 3-column ASCII files.
+#
+#---------------------------------------------------------------------
+#ASCII		# The input file is ASCII
+#SKIP 1		# The number of header records to skip
+#---------------------------------------------------------------------
+#name	intype	NaN-proxy?	NaN-proxy	scale	offset	oformat
+x	a	N		0		1	0	%g
+y	a	N		0		1	0	%g
+z	a	N		0		1	0	%g
